[gd_scene load_steps=23 format=2]

[ext_resource path="res://Interface/Theme_Main.tres" type="Theme" id=1]
[ext_resource path="res://Interface/Shop/UpgradePanel.gd" type="Script" id=2]
[ext_resource path="res://Interface/Assets/Retro6.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Interface/Assets/ButtonSounds.gd" type="Script" id=4]
[ext_resource path="res://Interface/Assets/HopeGold.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Interface/Shop/scrollbar_grabber.png" type="Texture" id=6]
[ext_resource path="res://Interface/Shop/scrollbar_grabber_hover.png" type="Texture" id=7]
[ext_resource path="res://Interface/Shop/scrollbar_grabber_bg.png" type="Texture" id=8]
[ext_resource path="res://Interface/Shop/scrollbar_grabber_drag.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 1, 1, 0.392157 )
corner_detail = 1

[sub_resource type="StyleBoxTexture" id=12]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 16, 22 )
margin_top = 7.0
margin_bottom = 7.0
expand_margin_top = 7.0
expand_margin_bottom = 7.0

[sub_resource type="StyleBoxTexture" id=13]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 16, 22 )
margin_top = 7.0
margin_bottom = 7.0
expand_margin_top = 7.0
expand_margin_bottom = 7.0

[sub_resource type="StyleBoxTexture" id=15]
texture = ExtResource( 9 )
region_rect = Rect2( 0, 0, 16, 22 )
margin_top = 7.0
margin_bottom = 7.0
expand_margin_top = 7.0
expand_margin_bottom = 7.0

[sub_resource type="StyleBoxTexture" id=14]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 16, 22 )
margin_top = 7.0
margin_bottom = 7.0

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )
ItemList/fonts/font = SubResource( 1 )
ItemList/styles/bg = SubResource( 3 )
ItemList/styles/bg_focus = SubResource( 4 )
ItemList/styles/selected = SubResource( 9 )
ItemList/styles/selected_focus = SubResource( 5 )
VScrollBar/styles/grabber = SubResource( 12 )
VScrollBar/styles/grabber_highlight = SubResource( 13 )
VScrollBar/styles/grabber_pressed = SubResource( 15 )
VScrollBar/styles/scroll = SubResource( 14 )

[sub_resource type="DynamicFont" id=10]
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=6]
use_mipmaps = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=11]
font_data = ExtResource( 5 )

[node name="UpgradePanel" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
script = ExtResource( 2 )

[node name="VBox" type="VBoxContainer" parent="."]
margin_left = 5.0
margin_right = 315.0
margin_bottom = 235.0

[node name="Spacing" type="Control" parent="VBox"]
margin_right = 310.0
margin_bottom = 94.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.8

[node name="Label" type="Label" parent="VBox"]
margin_top = 98.0
margin_right = 310.0
margin_bottom = 112.0
theme = ExtResource( 1 )

[node name="Panels" type="HBoxContainer" parent="VBox"]
margin_top = 116.0
margin_right = 310.0
margin_bottom = 235.0
size_flags_vertical = 3
custom_constants/separation = 2

[node name="Towers" type="PanelContainer" parent="VBox/Panels"]
margin_right = 205.0
margin_bottom = 119.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
theme = ExtResource( 1 )

[node name="ItemList" type="ItemList" parent="VBox/Panels/Towers"]
unique_name_in_owner = true
visible = false
margin_left = 5.0
margin_top = 5.0
margin_right = 200.0
margin_bottom = 110.0
focus_mode = 1
size_flags_vertical = 3
theme = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 10 )
items = [ "$250 - Box of Cannons", null, false, "Item 1", null, false, "Item 2", null, false, "Item 3", null, false, "Item 4", null, false, "Item 5", null, false ]

[node name="MainText" type="VBoxContainer" parent="VBox/Panels/Towers"]
unique_name_in_owner = true
margin_left = 5.0
margin_top = 5.0
margin_right = 200.0
margin_bottom = 113.0

[node name="ShopText" type="Label" parent="VBox/Panels/Towers/MainText"]
unique_name_in_owner = true
margin_right = 195.0
margin_bottom = 90.0
size_flags_vertical = 3
text = "Welcome to the shop."
autowrap = true

[node name="BonusText" type="Label" parent="VBox/Panels/Towers/MainText"]
unique_name_in_owner = true
margin_top = 94.0
margin_right = 195.0
margin_bottom = 108.0
size_flags_vertical = 5
text = "LEVEL START BONUS: $100"
autowrap = true

[node name="Options" type="PanelContainer" parent="VBox/Panels"]
margin_left = 207.0
margin_right = 310.0
margin_bottom = 119.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )

[node name="ShopMenu" type="VBoxContainer" parent="VBox/Panels/Options"]
unique_name_in_owner = true
margin_left = 5.0
margin_top = 5.0
margin_right = 98.0
margin_bottom = 113.0

[node name="BuyMenuButton" type="Button" parent="VBox/Panels/Options/ShopMenu"]
unique_name_in_owner = true
margin_right = 93.0
margin_bottom = 16.0
focus_mode = 0
theme = ExtResource( 1 )
text = "Buy"
script = ExtResource( 4 )

[node name="SellMenuButton" type="Button" parent="VBox/Panels/Options/ShopMenu"]
unique_name_in_owner = true
margin_top = 20.0
margin_right = 93.0
margin_bottom = 36.0
focus_mode = 0
text = "Sell"
script = ExtResource( 4 )

[node name="ExitButton" type="Button" parent="VBox/Panels/Options/ShopMenu"]
margin_top = 40.0
margin_right = 93.0
margin_bottom = 56.0
focus_mode = 0
text = "Continue"
script = ExtResource( 4 )

[node name="BuyMenu" type="VBoxContainer" parent="VBox/Panels/Options"]
unique_name_in_owner = true
visible = false
margin_left = 5.0
margin_top = 5.0
margin_right = 98.0
margin_bottom = 110.0

[node name="Description" type="Label" parent="VBox/Panels/Options/BuyMenu"]
unique_name_in_owner = true
margin_right = 93.0
margin_bottom = 52.0
size_flags_vertical = 7
custom_fonts/font = SubResource( 6 )
text = "This is a great description of a tower that is being described"
align = 1
autowrap = true
clip_text = true

[node name="Stats" type="Label" parent="VBox/Panels/Options/BuyMenu"]
unique_name_in_owner = true
margin_top = 56.0
margin_right = 93.0
margin_bottom = 85.0
custom_fonts/font = SubResource( 11 )
text = "s
s"

[node name="HBox" type="HBoxContainer" parent="VBox/Panels/Options/BuyMenu"]
margin_top = 89.0
margin_right = 93.0
margin_bottom = 105.0

[node name="BuyButton" type="Button" parent="VBox/Panels/Options/BuyMenu/HBox"]
unique_name_in_owner = true
visible = false
margin_right = 44.0
margin_bottom = 16.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 8
theme = ExtResource( 1 )
text = "Buy"
script = ExtResource( 4 )

[node name="SellButton" type="Button" parent="VBox/Panels/Options/BuyMenu/HBox"]
unique_name_in_owner = true
visible = false
margin_left = 28.0
margin_right = 60.0
margin_bottom = 16.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 8
theme = ExtResource( 1 )
text = "Sell"
script = ExtResource( 4 )

[node name="BackButton" type="Button" parent="VBox/Panels/Options/BuyMenu/HBox"]
margin_right = 93.0
margin_bottom = 16.0
focus_mode = 0
size_flags_horizontal = 3
text = "Back"
script = ExtResource( 4 )

[connection signal="item_selected" from="VBox/Panels/Towers/ItemList" to="." method="_on_item_selected"]
[connection signal="pressed" from="VBox/Panels/Options/ShopMenu/BuyMenuButton" to="." method="_on_BuyMenuButton_pressed"]
[connection signal="pressed" from="VBox/Panels/Options/ShopMenu/SellMenuButton" to="." method="_on_SellMenuButton_pressed"]
[connection signal="pressed" from="VBox/Panels/Options/ShopMenu/ExitButton" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="VBox/Panels/Options/BuyMenu/HBox/BuyButton" to="." method="_on_buy_pressed"]
[connection signal="pressed" from="VBox/Panels/Options/BuyMenu/HBox/SellButton" to="." method="_on_sell_pressed"]
[connection signal="pressed" from="VBox/Panels/Options/BuyMenu/HBox/BackButton" to="." method="_on_BackButton_pressed"]
